# sstfr

./: .gitignore  README.md  pyproject.toml
configs/: diag_sstfr_no_tb.yaml  logmel_esc50_fold1_seed0.yaml  logmel_esc50_fold1_seed1.yaml  logmel_esc50_fold1_seed2.yaml  logmel_esc50_fold2_seed0.yaml  logmel_esc50_fold3_seed0.yaml  logmel_esc50_fold4_seed0.yaml  logmel_esc50_fold5_seed0.yaml  smoke5_logmel.yaml  smoke5_sstfr.yaml  smoke_logmel.yaml  smoke_sstfr.yaml  smoke_sstfr_align.yaml  speed_test_sstfr.yaml  sstfr_lam0_esc50_fold1_seed0.yaml  sstfr_lam0_esc50_fold1_seed1.yaml  sstfr_lam0_esc50_fold1_seed2.yaml  sstfr_lam0_esc50_fold2_seed0.yaml  sstfr_lam0_esc50_fold3_seed0.yaml  sstfr_lam0_esc50_fold4_seed0.yaml  sstfr_lam0_esc50_fold5_seed0.yaml
scripts/: precompute_sst.py  run_overnight.sh  train.py
sstfr/data/: esc50.py  sst_cache.py
sstfr/losses/: if_estimator.py  synchrosqueezing_loss.py
sstfr/models/: classifier.py  logmel_frontend.py  ssm_layer.py  sstfr_frontend.py
sstfr/training/: config.py  trainer.py
tests/: test_frontends_and_classifier.py  test_gabor_equivalence.py  test_if_estimator.py  test_integration_esc50.py  test_sst_cache.py  test_synchrosqueezing_loss.py
