[project]
name = "sstfr"
version = "0.1.0"
description = "State Space Time-Frequency Representations: Differentiable Gabor-like audio front-end"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Anonymous", email = "anon@example.com" }]
keywords = ["audio", "deep-learning", "state-space-models", "time-frequency", "gabor", "synchrosqueezing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML
    "numpy>=1.26,<2.0",
    "scipy>=1.11",
    "einops>=0.7",

    # Audio
    "soundfile>=0.12",
    "librosa>=0.10",
    "ssqueezepy>=0.6.5",

    # Config & logging
    "pyyaml>=6.0",
    "omegaconf>=2.3",
    "tqdm>=4.66",
    "tensorboard>=2.15",

    # Data
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "requests>=2.31",

    # Plotting
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "ipython>=8.18",
    "jupyter>=1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sstfr*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
